Sutter Health/src/objects/SH_Sub_Menu_Item__c.object
<CustomObject>
    <fields>
        <fullName>SH_Customer_Intent__c</fullName>
        <label>Customer Intent</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SH_Sub_Function__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>General Inquiry</fullName>
                </value>
                <value>
                    <fullName>HR-Health &amp; Welfare</fullName>
                </value>
                <value>
                    <fullName>Insurance (Medical, Dental, Vision)</fullName>
                </value>
                <value>
                    <fullName>HR-Pension/Retiree Benefits</fullName>
                </value>
                <value>
                    <fullName>System Inquiries</fullName>
                </value>
                <value>
                    <fullName>Pay inquiry</fullName>
                </value>
                <value>
                    <fullName>Kronos</fullName>
                </value>
                <value>
                    <fullName>Learning Administration</fullName>
                </value>
                <value>
                    <fullName>MyPSDP</fullName>
                </value>
                <value>
                    <fullName>Workforce Relations</fullName>
                </value>
                <value>
                    <fullName>Requisition</fullName>
                </value>
                <value>
                    <fullName>HR Information System (HRIS)</fullName>
                </value>
                <value>
                    <fullName>Employee Compensation</fullName>
                </value>
                <value>
                    <fullName>Contingent Staffing</fullName>
                </value>
                <value>
                    <fullName>General AP Inquiry</fullName>
                </value>
                <value>
                    <fullName>Vendor Setup/Vendor Data Change Request</fullName>
                </value>
                <value>
                    <fullName>Purchasing</fullName>
                </value>
                <value>
                    <fullName>HR Disability Leave Management</fullName>
                </value>
                <value>
                    <fullName>MyHIRE</fullName>
                </value>
                <value>
                    <fullName>Employee Data Setup and Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SH_Employee_Exempt_non_exempt_Status__c</fullName>
        <label>Employee Exempt/non-exempt Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SH_Function__c</fullName>
        <label>Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credentialing Verification</fullName>
                </value>
                <value>
                    <fullName>Document Management Center</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Human Resource</fullName>
                </value>
                <value>
                    <fullName>Revenue Cycle</fullName>
                </value>
                <value>
                    <fullName>Supply Chain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SH_Is_Preview__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Preview</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SH_Is_Publish__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Publish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SH_Menu_Item__c</fullName>
        <label>Menu Item</label>
        <referenceTo>SH_Menu_Item__c</referenceTo>
        <relationshipLabel>Sub Menu Items</relationshipLabel>
        <relationshipName>Sub_Menu_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SH_Order_of_Display__c</fullName>
        <label>Order of Display</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SH_Secondary_Page_Description__c</fullName>
        <label>Secondary Page Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SH_Sub_Function__c</fullName>
        <label>Sub-Function</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SH_Function__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts Payable</fullName>
                </value>
                <value>
                    <fullName>Accounts Receivable and Managed Care</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Application Request</fullName>
                </value>
                <value>
                    <fullName>Benefits</fullName>
                </value>
                <value>
                    <fullName>Biomedical Technology</fullName>
                </value>
                <value>
                    <fullName>CBO Customer Service</fullName>
                </value>
                <value>
                    <fullName>Central Business Office (CBO)</fullName>
                </value>
                <value>
                    <fullName>Comp &amp; Perf Mgt</fullName>
                </value>
                <value>
                    <fullName>HR Compensation</fullName>
                </value>
                <value>
                    <fullName>Content Management</fullName>
                </value>
                <value>
                    <fullName>Contract Management</fullName>
                </value>
                <value>
                    <fullName>Credentialing Verification</fullName>
                </value>
                <value>
                    <fullName>Data, Applications, Reporting and Audit</fullName>
                </value>
                <value>
                    <fullName>Data Change Request</fullName>
                </value>
                <value>
                    <fullName>Decision Support Group &amp; Data Management</fullName>
                </value>
                <value>
                    <fullName>Document Management Center</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>General Inquiry</fullName>
                </value>
                <value>
                    <fullName>General Purchasing</fullName>
                </value>
                <value>
                    <fullName>GL Accounting</fullName>
                </value>
                <value>
                    <fullName>Health Information Management (HIM)</fullName>
                </value>
                <value>
                    <fullName>HIM</fullName>
                </value>
                <value>
                    <fullName>HR Benefits</fullName>
                </value>
                <value>
                    <fullName>HR Information System (HRIS)</fullName>
                </value>
                <value>
                    <fullName>HR Ops</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Labor</fullName>
                </value>
                <value>
                    <fullName>Learning</fullName>
                </value>
                <value>
                    <fullName>Other Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SH_Team__c</fullName>
        <label>Team</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SH_Sub_Function__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>[Tier 1] HR Benefits</fullName>
                </value>
                <value>
                    <fullName>[Tier 1] HR Pension</fullName>
                </value>
                <value>
                    <fullName>[Tier 1] Payroll T&amp;E / Compensation</fullName>
                </value>
                <value>
                    <fullName>[Tier 1] Learning</fullName>
                </value>
                <value>
                    <fullName>[Tier 1] HRIS</fullName>
                </value>
                <value>
                    <fullName>[Tier 1] Workforce Relations</fullName>
                </value>
                <value>
                    <fullName>[Tier 1] HR Recruitment</fullName>
                </value>
                <value>
                    <fullName>[Tier 1] Compensation</fullName>
                </value>
                <value>
                    <fullName>[Tier 1] AP / Purchasing / Supply Chain</fullName>
                </value>
                <value>
                    <fullName>[Tier 3] Purchasing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sub Menu Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sub Menu Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub Menu Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>